[tool.poetry]
name = "whisperwave"
version = "0.1.0"
description = ""
authors = ["midnigh8k <midnigh8k@sapo.pt>"]
readme = "README.md"
packages = [
    { include = "whisperwave/*.py" }
]

[tool.poetry.dependencies]
python = "^3.13"
SQLAlchemy = "^2.0.40"
requests = "^2.32.3"
pika = "^1.3.2"

[tool.poetry.scripts]
whisperwave = "whisperwave.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
